HUE-5546 [responsive] Avoid horizontal scrolling on the editor
(cherry picked from commit 2f918e8a09843c6264a143228f722cb402e64417)

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -301,6 +301,7 @@ body {
   -ms-flex: 1;
   flex: 1;
   position: relative;
+  overflow-x: hidden!important;
 }
 
 .page-content .content-panel {
